// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Dark Mode Hover Menu/Dark Mode Hover Menu Dark Mode Hover Menu 1`] = `
<div
  className="w-64 text-right"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-label="Select dark/light mode"
    id="headlessui-menu-button-1"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className=" justify-left relative inline-flex  h-7 rounded-md  bg-black  bg-opacity-20 px-4 py-2  text-left  text-sm  font-medium                 text-white hover:bg-opacity-30 focus-visible:ring-2         focus-visible:ring-white focus-visible:ring-opacity-75 "
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M3 5a2 2 0 012-2h10a2 2 0 012 2v8a2 2 0 01-2 2h-2.22l.123.489.804.804A1 1 0 0113 18H7a1 1 0 01-.707-1.707l.804-.804L7.22 15H5a2 2 0 01-2-2V5zm5.771 7H5V5h10v7H8.771z"
        fillRule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/Hello World/Hello World 2 Hello World 2 1`] = `
<h1
  className=" text-3xl font-bold  text-colorPrimary  underline "
>
  Hello world!!
</h1>
`;

exports[`Storyshots Components/Hello World/Hello World 2 Hello World 3 1`] = `
<h1
  className=" text-3xl font-bold  text-colorPrimary  underline "
>
  Hello world!!
</h1>
`;

exports[`Storyshots Components/Hello World/Hello World Hello World 1`] = `
<h1
  className=" text-3xl font-bold  text-colorPrimary  underline "
>
  Hello world!!
</h1>
`;

exports[`Storyshots Components/Hover Menu/Hover Menu Simple Example Hover Menu Simple Example 1`] = `
<div
  className="w-64 text-right"
>
  <div
    className="relative inline-block"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Select Color"
      id="headlessui-menu-button-5"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <div
        className=" justify-left inline-flex  w-full rounded-md  bg-black  bg-opacity-20  px-4 py-2 text-sm  font-medium  text-white  hover:bg-opacity-30                 focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75 "
      >
        Green
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Pages/Home Home Page 1`] = `
<div>
  <header
    className="flex"
  >
    <nav
      className="flex w-full flex-row"
    >
      <div
        className="flex"
      >
        <span
          style={
            Object {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "inline-block",
              "height": "initial",
              "margin": 0,
              "maxWidth": "100%",
              "opacity": 1,
              "overflow": "hidden",
              "padding": 0,
              "position": "relative",
              "width": "initial",
            }
          }
        >
          <span
            style={
              Object {
                "background": "none",
                "border": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": "initial",
                "margin": 0,
                "maxWidth": "100%",
                "opacity": 1,
                "padding": 0,
                "width": "initial",
              }
            }
          >
            <img
              alt=""
              aria-hidden={true}
              src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2772%27%20height=%2716%27/%3e"
              style={
                Object {
                  "background": "none",
                  "border": 0,
                  "display": "block",
                  "height": "initial",
                  "margin": 0,
                  "maxWidth": "100%",
                  "opacity": 1,
                  "padding": 0,
                  "width": "initial",
                }
              }
            />
          </span>
          <img
            alt="Vercel Logo"
            data-nimg="intrinsic"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
          <noscript>
            <img
              alt="Vercel Logo"
              data-nimg="intrinsic"
              decoding="async"
              loading="lazy"
              src="/vercel.svg"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </noscript>
        </span>
      </div>
      <div
        className="flex w-32 flex-col sm:flex-row"
      >
        <div
          className="relative inline-block"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            aria-label="Select Link"
            id="headlessui-menu-button-2"
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <div
              className=" justify-left inline-flex  w-full rounded-md  bg-black  bg-opacity-20  px-4 py-2 text-sm  font-medium  text-white  hover:bg-opacity-30                 focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75 "
            >
              Home
            </div>
          </button>
        </div>
        <div
          className="relative inline-block"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            aria-label="Select Link"
            id="headlessui-menu-button-3"
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <div
              className=" justify-left inline-flex  w-full rounded-md  bg-black  bg-opacity-20  px-4 py-2 text-sm  font-medium  text-white  hover:bg-opacity-30                 focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75 "
            >
              Features
            </div>
          </button>
        </div>
      </div>
      <div
        className="ml-auto flex"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="Select dark/light mode"
          id="headlessui-menu-button-4"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className=" justify-left relative inline-flex  h-7 rounded-md  bg-black  bg-opacity-20 px-4 py-2  text-left  text-sm  font-medium                 text-white hover:bg-opacity-30 focus-visible:ring-2         focus-visible:ring-white focus-visible:ring-opacity-75 "
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M3 5a2 2 0 012-2h10a2 2 0 012 2v8a2 2 0 01-2 2h-2.22l.123.489.804.804A1 1 0 0113 18H7a1 1 0 01-.707-1.707l.804-.804L7.22 15H5a2 2 0 01-2-2V5zm5.771 7H5V5h10v7H8.771z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="group flex h-12 w-12 flex-col items-center justify-center rounded border-2 border-black"
          onClick={[Function]}
        >
          <div
            className="my-1 h-1 w-6 transform rounded-full bg-black transition duration-300 ease-in opacity-50 group-hover:opacity-100"
          />
          <div
            className="my-1 h-1 w-6 transform rounded-full bg-black transition duration-300 ease-in opacity-50 group-hover:opacity-100"
          />
          <div
            className="my-1 h-1 w-6 transform rounded-full bg-black transition duration-300 ease-in opacity-50 group-hover:opacity-100"
          />
        </button>
      </div>
    </nav>
  </header>
  <main
    className="px-64"
  >
    <h1
      className="text-4xl font-bold"
    >
      <span
        className="text-gray-700"
      >
        Hello
      </span>
      <span
        className="text-gray-500"
      >
        World
      </span>
    </h1>
    <p
      className="text-gray-700"
    >
      Do adipisicing reprehenderit ad mollit consectetur laboris. Velit pariatur exercitation cupidatat voluptate anim id anim aliquip nulla voluptate. Ut commodo nostrud deserunt dolor aliqua et aliquip magna est sunt ipsum tempor fugiat quis. Laborum ipsum amet enim consectetur id sit eu veniam elit. Aliquip labore laboris adipisicing commodo sit Lorem eiusmod nostrud cillum laboris ad ad. Occaecat amet eu nulla et magna nulla aute ipsum. Do laborum aute pariatur consequat occaecat velit esse labore. Id dolore do irure laborum aliquip veniam et proident. Lorem officia quis eu do. Aliquip voluptate voluptate consequat ex enim deserunt. Velit do consectetur esse adipisicing voluptate nulla minim magna quis incididunt consequat. Velit et ullamco excepteur Lorem quis minim do irure ad magna incididunt ea fugiat. Minim officia culpa culpa ullamco veniam anim pariatur irure cillum. Officia duis dolore dolore ut aliqua quis velit laborum qui Lorem. Proident officia id veniam anim nisi.
    </p>
    <p
      className="text-gray-700"
    >
      Adipisicing cupidatat minim pariatur aliquip anim sunt ad eiusmod tempor nulla qui est. Reprehenderit tempor laboris enim ex quis adipisicing pariatur. Enim amet ullamco ut eiusmod laboris sunt sit. Reprehenderit officia dolore ipsum cillum. Ea quis consectetur mollit sit ad cillum occaecat nisi quis deserunt. Labore id tempor culpa occaecat sint dolore est ex in eiusmod sint dolore id occaecat. Consequat irure officia consectetur ipsum in ullamco nulla magna reprehenderit ex eu aute. Est sit in fugiat Lorem. Consequat est commodo laboris sunt. Esse ea et velit amet ex. Dolor est sunt adipisicing magna sunt nulla consectetur qui. Elit aute laborum in esse aliquip proident adipisicing anim laborum irure et labore. Qui tempor sunt tempor aute elit aute incididunt et excepteur incididunt. Enim aliqua cupidatat tempor pariatur aliqua proident deserunt nisi esse quis aute aliqua esse. Velit id mollit tempor commodo aliquip occaecat elit cupidatat. Id pariatur commodo sit est laboris culpa amet anim tempor aute ad ea non. Pariatur non aute cillum ea nostrud velit cillum reprehenderit voluptate. Esse voluptate occaecat incididunt tempor culpa.
    </p>
  </main>
</div>
`;
